Fix nav being below cart z-index

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -10,7 +10,7 @@ header {
     width: 100%;
     min-height: 10vh;
     background-color: variables.$primaryBackground;
-    z-index: 1000;
+    z-index: 999999;
     box-shadow: 0px 9px 10px rgba(0, 0, 0, 0.13);
     color: variables.$fontLight;
 
